# workshop_back_2024

./: .gitignore  README.md  manage.py  pyproject.toml
books/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py
papers/: admin.py  models.py  serializers.py  urls.py  views.py
papers/migrations/: 0001_initial.py  0002_alter_papers_author.py  0003_remove_category_papers_cate_name_709915_idx_and_more.py  0004_alter_category_name_and_more.py
pgdata/: sh_command.txt
